# wallet-core-windows

src/Everscale/: Cell.cpp  Cell.h
tests/chains/Aptos/: MoveTypesTests.cpp
tests/chains/Cardano/: SigningTests.cpp  TWCardanoAddressTests.cpp
tests/chains/Zilliqa/: SignerTests.cpp
tools/: windows-build-and-test.ps1  windows-dependencies-version.ps1  windows-download-dependencies.ps1  windows-doxygen_convert_comments.ps1
tools/windows-replace/: CMakeLists.txt  readme.md  windows-dragon-king.pl
tools/windows-replace/cmake/: CompilerWarnings.cmake  Protobuf.cmake
tools/windows-replace/include/TrustWalletCore/: TWAnySigner.h  TWBase.h  TWString.h
tools/windows-replace/powerShell/: windows-bootstrap.ps1  windows-build.ps1  windows-dependencies.ps1  windows-doxygen_convert_comments.ps1  windows-generate.ps1  windows-replace-file.pl  windows-samples.ps1  windows-tests.ps1
tools/windows-replace/protobuf-plugin/: CMakeLists.txt
tools/windows-replace/src/: Base32.h  BinaryCoding.h  HDWallet.cpp
tools/windows-replace/src/Aptos/: MoveTypes.cpp
tools/windows-replace/src/Everscale/: CellSlice.h
tools/windows-replace/src/Keystore/: EncryptionParameters.cpp
tools/windows-replace/src/NULS/: Address.cpp
tools/windows-replace/src/interface/: TWBitcoinScript.cpp
tools/windows-replace/tests/: CMakeLists.txt  main.cpp
tools/windows-replace/tests/common/: BCSTests.cpp
tools/windows-replace/trezor-crypto/: CMakeLists.txt
tools/windows-replace/trezor-crypto/crypto/tests/: CMakeLists.txt  test_check.c
tools/windows-replace/walletconsole/: CMakeLists.txt
(+18 files in other folders)
